--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-<p>un petit dépôt continue de gagner<p>
-
-    <link rel="shortcut icon" href="https://github.com/dernieresnouvelles/indice/blob/main/png.jpeg?raw=true">
-            <link rel="apple-touch-icon-precomposed" href="https://github.com/dernieresnouvelles/indice/blob/main/png.jpeg?raw=true" />
+<h1>pousses de chou frisé</h1>
