--- a/tesst.html
+++ b/tesst.html
@@ -212,8 +212,8 @@
             </div>
           </div>
           <div class='button-wrapper'>
-            <a href='https://medanlink.com/hfT6S2klYzOV' rel = "nofollow" class='btn-secondary'>AATOTO</a>
-            <a href='https://medanlink.com/cShABtgw51CA' rel = "nofollow" class='btn-primary'>KANGENWIN</a>
+            <a href='https://medanlink.com/9SO4jlNaPHra' rel = "nofollow" class='btn-secondary'>AATOTO</a>
+            <a href='https://medanlink.com/s1BUgKznefYX' rel = "nofollow" class='btn-primary'>KANGENWIN</a>
           </div>
         </div>
       <br>
@@ -232,10 +232,10 @@
         <section class='n-container m-b-normal'>
       <div class="btn-body">
         <div class="btn-items">
-          <a href="https://medanlink.com/hfT6S2klYzOV" rel="nofollow noreferrer" target="_blank">AATOTO</a>
+          <a href="https://medanlink.com/9SO4jlNaPHra" rel="nofollow noreferrer" target="_blank">AATOTO</a>
         </div>
         <div class="btn-items">
-          <a href="https://medanlink.com/cShABtgw51CA" rel="nofollow noreferrer" target="_blank">KANGENWIN</a>
+          <a href="https://medanlink.com/s1BUgKznefYX" rel="nofollow noreferrer" target="_blank">KANGENWIN</a>
         </div>
       </div>
     </section>
