--- a/Dedi-dari-Malang-Menang-Rp-85-Juta-di-Sweet-Bonanza.html
+++ b/Dedi-dari-Malang-Menang-Rp-85-Juta-di-Sweet-Bonanza.html
@@ -32,7 +32,7 @@
         <meta name="geo.region" content="ID" />
         <meta name="tgn.nation" content="Indonesia" />
         <!-- Facebook -->
-        <meta property="og:title" content="Transformasi Warkop Jadi Cafe Hits: Agus dari Bandung Raup Rp 90 Juta Bermain Gates of Olympus 1000, Berkat Kombinasi Pola Double Chance dan RTP Tinggi!" />
+        <meta property="og:title" content="Perjalanan Dari Gelandangan Jadi Sultan: Dedi dari Malang Menang Rp 85 Juta di Sweet Bonanza, Berkat Pola Scatter Analyzer dan Timing Bermain yang Jitu!" />
         <meta property="og:description" content="Transformasi warkop jadi cafe hits: Agus dari Bandung sukses raup Rp 90 juta dengan bermain Gates of Olympus 1000. Temukan strategi, pola Double Chance, dan RTP Live untuk raih hasil serupa." />
         <meta property="og:url" content="https://dernieresnouvelles.github.io/indice/Dedi-dari-Malang-Menang-Rp-85-Juta-di-Sweet-Bonanza.html" />
         <meta property="og:image" content="https://plcl.me/images/mWoMV.jpg" />
@@ -43,7 +43,7 @@
         <meta property="og:type" content="website" />
         <!-- Twitter -->
         <meta name="twitter:card" content="pousses de chou frisé" />
-        <meta name="twitter:title" content="Transformasi Warkop Jadi Cafe Hits: Agus dari Bandung Raup Rp 90 Juta Bermain Gates of Olympus 1000, Berkat Kombinasi Pola Double Chance dan RTP Tinggi!" />
+        <meta name="twitter:title" content="Perjalanan Dari Gelandangan Jadi Sultan: Dedi dari Malang Menang Rp 85 Juta di Sweet Bonanza, Berkat Pola Scatter Analyzer dan Timing Bermain yang Jitu!" />
         <meta name="twitter:description" content="Transformasi warkop jadi cafe hits: Agus dari Bandung sukses raup Rp 90 juta dengan bermain Gates of Olympus 1000. Temukan strategi, pola Double Chance, dan RTP Live untuk raih hasil serupa." />
         <meta name="twitter:url" content="$url" />
         <meta name="twitter:image" content="https://plcl.me/images/mWoMV.jpg" />
@@ -150,7 +150,7 @@
             "@context": "https://schema.org",
             "@type": "Organization",
             "name": "pousses de chou frisé",
-            "alternateName": "Transformasi Warkop Jadi Cafe Hits: Agus dari Bandung Raup Rp 90 Juta Bermain Gates of Olympus 1000, Berkat Kombinasi Pola Double Chance dan RTP Tinggi!",
+            "alternateName": "Perjalanan Dari Gelandangan Jadi Sultan: Dedi dari Malang Menang Rp 85 Juta di Sweet Bonanza, Berkat Pola Scatter Analyzer dan Timing Bermain yang Jitu!",
             "url": "https://dernieresnouvelles.github.io/indice/Dedi-dari-Malang-Menang-Rp-85-Juta-di-Sweet-Bonanza.html",
             "logo": "https://plcl.me/images/fQaDo.jpeg"
           }
@@ -180,7 +180,7 @@
               "@type": "WebPage",
               "@id": "https://dernieresnouvelles.github.io/indice/Dedi-dari-Malang-Menang-Rp-85-Juta-di-Sweet-Bonanza.html"
             },
-            "headline": "Transformasi Warkop Jadi Cafe Hits: Agus dari Bandung Raup Rp 90 Juta Bermain Gates of Olympus 1000, Berkat Kombinasi Pola Double Chance dan RTP Tinggi!",
+            "headline": "Perjalanan Dari Gelandangan Jadi Sultan: Dedi dari Malang Menang Rp 85 Juta di Sweet Bonanza, Berkat Pola Scatter Analyzer dan Timing Bermain yang Jitu!",
             "description": "Transformasi warkop jadi cafe hits: Agus dari Bandung sukses raup Rp 90 juta dengan bermain Gates of Olympus 1000. Temukan strategi, pola Double Chance, dan RTP Live untuk raih hasil serupa.",
         "image": ["https://plcl.me/images/mWoMV.jpg"],
             "author": {
@@ -269,7 +269,7 @@
         <section class='n-container m-b-normal'>
           <article class='bg-container contain'>
             <div class='article'>
-              <h1 class="text-center" itemprop="headline"><strong>Transformasi Warkop Jadi Cafe Hits: Agus dari Bandung Raup Rp 90 Juta Bermain Gates of Olympus 1000, Berkat Kombinasi Pola Double Chance dan RTP Tinggi!</strong></h1>
+              <h1 class="text-center" itemprop="headline"><strong>Perjalanan Dari Gelandangan Jadi Sultan: Dedi dari Malang Menang Rp 85 Juta di Sweet Bonanza, Berkat Pola Scatter Analyzer dan Timing Bermain yang Jitu!</strong></h1>
              
               <p>Siapa sangka, hidup bisa berubah dalam sekejap berkat keberanian dan strategi yang tepat. Kisah Dedi, seorang pria dari Malang yang dulunya hanya seorang gelandangan, kini menjadi perbincangan hangat setelah memenangkan Rp 85 juta dari permainan Sweet Bonanza. Dengan memanfaatkan RTP Live dan pola Scatter Analyzer, Dedi membuktikan bahwa strategi dan timing bermain yang jitu bisa membawa perubahan besar dalam hidup seseorang. Artikel ini akan membahas perjalanan inspiratif Dedi, strategi yang ia gunakan, serta tips bermain kasino online untuk Anda yang ingin mencoba peruntungan.</p>
 
