--- a/Kuli-Panggul-Pontianak-Bawa-Pulang-Rp-65-Juta-Bermodal-Koin-Sisa-Pulsa-Rp-25-Ribu.html
+++ b/Kuli-Panggul-Pontianak-Bawa-Pulang-Rp-65-Juta-Bermodal-Koin-Sisa-Pulsa-Rp-25-Ribu.html
@@ -32,7 +32,7 @@
         <meta name="geo.region" content="ID" />
         <meta name="tgn.nation" content="Indonesia" />
         <!-- Facebook -->
-        <meta property="og:title" content="Transformasi Warkop Jadi Cafe Hits: Agus dari Bandung Raup Rp 90 Juta Bermain Gates of Olympus 1000, Berkat Kombinasi Pola Double Chance dan RTP Tinggi!" />
+        <meta property="og:title" content="Keajaiban Mahjong Wins 3: Kuli Panggul Pontianak Bawa Pulang Rp 65 Juta Bermodal Koin Sisa Pulsa Rp 25 Ribu, Berkat Pola Turbo Spin dan Frekuensi Bet Tertentu" />
         <meta property="og:description" content="Transformasi warkop jadi cafe hits: Agus dari Bandung sukses raup Rp 90 juta dengan bermain Gates of Olympus 1000. Temukan strategi, pola Double Chance, dan RTP Live untuk raih hasil serupa." />
         <meta property="og:url" content="https://dernieresnouvelles.github.io/indice/Kuli-Panggul-Pontianak-Bawa-Pulang-Rp-65-Juta-Bermodal-Koin-Sisa-Pulsa-Rp-25-Ribu.html" />
         <meta property="og:image" content="https://plcl.me/images/Jqbc7.jpg" />
@@ -43,7 +43,7 @@
         <meta property="og:type" content="website" />
         <!-- Twitter -->
         <meta name="twitter:card" content="pousses de chou frisé" />
-        <meta name="twitter:title" content="Transformasi Warkop Jadi Cafe Hits: Agus dari Bandung Raup Rp 90 Juta Bermain Gates of Olympus 1000, Berkat Kombinasi Pola Double Chance dan RTP Tinggi!" />
+        <meta name="twitter:title" content="Keajaiban Mahjong Wins 3: Kuli Panggul Pontianak Bawa Pulang Rp 65 Juta Bermodal Koin Sisa Pulsa Rp 25 Ribu, Berkat Pola Turbo Spin dan Frekuensi Bet Tertentu" />
         <meta name="twitter:description" content="Transformasi warkop jadi cafe hits: Agus dari Bandung sukses raup Rp 90 juta dengan bermain Gates of Olympus 1000. Temukan strategi, pola Double Chance, dan RTP Live untuk raih hasil serupa." />
         <meta name="twitter:url" content="$url" />
         <meta name="twitter:image" content="https://plcl.me/images/Jqbc7.jpg" />
@@ -150,7 +150,7 @@
             "@context": "https://schema.org",
             "@type": "Organization",
             "name": "pousses de chou frisé",
-            "alternateName": "Transformasi Warkop Jadi Cafe Hits: Agus dari Bandung Raup Rp 90 Juta Bermain Gates of Olympus 1000, Berkat Kombinasi Pola Double Chance dan RTP Tinggi!",
+            "alternateName": "Keajaiban Mahjong Wins 3: Kuli Panggul Pontianak Bawa Pulang Rp 65 Juta Bermodal Koin Sisa Pulsa Rp 25 Ribu, Berkat Pola Turbo Spin dan Frekuensi Bet Tertentu",
             "url": "https://dernieresnouvelles.github.io/indice/Kuli-Panggul-Pontianak-Bawa-Pulang-Rp-65-Juta-Bermodal-Koin-Sisa-Pulsa-Rp-25-Ribu.html",
             "logo": "https://plcl.me/images/fQaDo.jpeg"
           }
@@ -180,7 +180,7 @@
               "@type": "WebPage",
               "@id": "https://dernieresnouvelles.github.io/indice/Kuli-Panggul-Pontianak-Bawa-Pulang-Rp-65-Juta-Bermodal-Koin-Sisa-Pulsa-Rp-25-Ribu.html"
             },
-            "headline": "Transformasi Warkop Jadi Cafe Hits: Agus dari Bandung Raup Rp 90 Juta Bermain Gates of Olympus 1000, Berkat Kombinasi Pola Double Chance dan RTP Tinggi!",
+            "headline": "Keajaiban Mahjong Wins 3: Kuli Panggul Pontianak Bawa Pulang Rp 65 Juta Bermodal Koin Sisa Pulsa Rp 25 Ribu, Berkat Pola Turbo Spin dan Frekuensi Bet Tertentu",
             "description": "Transformasi warkop jadi cafe hits: Agus dari Bandung sukses raup Rp 90 juta dengan bermain Gates of Olympus 1000. Temukan strategi, pola Double Chance, dan RTP Live untuk raih hasil serupa.",
         "image": ["https://plcl.me/images/Jqbc7.jpg"],
             "author": {
@@ -269,7 +269,7 @@
         <section class='n-container m-b-normal'>
           <article class='bg-container contain'>
             <div class='article'>
-              <h1 class="text-center" itemprop="headline"><strong>Transformasi Warkop Jadi Cafe Hits: Agus dari Bandung Raup Rp 90 Juta Bermain Gates of Olympus 1000, Berkat Kombinasi Pola Double Chance dan RTP Tinggi!</strong></h1>
+              <h1 class="text-center" itemprop="headline"><strong>Keajaiban Mahjong Wins 3: Kuli Panggul Pontianak Bawa Pulang Rp 65 Juta Bermodal Koin Sisa Pulsa Rp 25 Ribu, Berkat Pola Turbo Spin dan Frekuensi Bet Tertentu</strong></h1>
              
               <p>Di Pontianak, sebuah kisah unik mencuat tentang seorang kuli panggul yang berhasil membawa pulang uang Rp 65 juta hanya bermodal koin sisa pulsa Rp 25 ribu. Keajaiban ini terjadi berkat permainan Mahjong Wins 3 yang didukung strategi bermain cerdas dan pemanfaatan RTP LIVE. Kisah ini bukan hanya inspiratif, tetapi juga mengajarkan pentingnya memahami pola turbo spin dan frekuensi bet tertentu dalam meningkatkan peluang menang.</p>
 
