--- a/Dedi-dari-Malang-Menang-Rp-85-Juta-di-Sweet-Bonanza.html
+++ b/Dedi-dari-Malang-Menang-Rp-85-Juta-di-Sweet-Bonanza.html
@@ -33,7 +33,7 @@
         <meta name="tgn.nation" content="Indonesia" />
         <!-- Facebook -->
         <meta property="og:title" content="Perjalanan Dari Gelandangan Jadi Sultan: Dedi dari Malang Menang Rp 85 Juta di Sweet Bonanza, Berkat Pola Scatter Analyzer dan Timing Bermain yang Jitu!" />
-        <meta property="og:description" content="Transformasi warkop jadi cafe hits: Agus dari Bandung sukses raup Rp 90 juta dengan bermain Gates of Olympus 1000. Temukan strategi, pola Double Chance, dan RTP Live untuk raih hasil serupa." />
+        <meta property="og:description" content="Kisah Dedi dari Malang yang berhasil memenangkan Rp 85 juta di Sweet Bonanza berkat strategi RTP Live dan pola Scatter Analyzer yang jitu. Pelajari cara dan tips bermain kasino online dengan gaya berbeda!." />
         <meta property="og:url" content="https://dernieresnouvelles.github.io/indice/Dedi-dari-Malang-Menang-Rp-85-Juta-di-Sweet-Bonanza.html" />
         <meta property="og:image" content="https://plcl.me/images/mWoMV.jpg" />
         <meta property="og:image:type" content="image/jpg" />
@@ -44,7 +44,7 @@
         <!-- Twitter -->
         <meta name="twitter:card" content="pousses de chou frisé" />
         <meta name="twitter:title" content="Perjalanan Dari Gelandangan Jadi Sultan: Dedi dari Malang Menang Rp 85 Juta di Sweet Bonanza, Berkat Pola Scatter Analyzer dan Timing Bermain yang Jitu!" />
-        <meta name="twitter:description" content="Transformasi warkop jadi cafe hits: Agus dari Bandung sukses raup Rp 90 juta dengan bermain Gates of Olympus 1000. Temukan strategi, pola Double Chance, dan RTP Live untuk raih hasil serupa." />
+        <meta name="twitter:description" content="Kisah Dedi dari Malang yang berhasil memenangkan Rp 85 juta di Sweet Bonanza berkat strategi RTP Live dan pola Scatter Analyzer yang jitu. Pelajari cara dan tips bermain kasino online dengan gaya berbeda!." />
         <meta name="twitter:url" content="$url" />
         <meta name="twitter:image" content="https://plcl.me/images/mWoMV.jpg" />
         <meta name="twitter:site" content="pousses de chou frisé" />
@@ -181,7 +181,7 @@
               "@id": "https://dernieresnouvelles.github.io/indice/Dedi-dari-Malang-Menang-Rp-85-Juta-di-Sweet-Bonanza.html"
             },
             "headline": "Perjalanan Dari Gelandangan Jadi Sultan: Dedi dari Malang Menang Rp 85 Juta di Sweet Bonanza, Berkat Pola Scatter Analyzer dan Timing Bermain yang Jitu!",
-            "description": "Transformasi warkop jadi cafe hits: Agus dari Bandung sukses raup Rp 90 juta dengan bermain Gates of Olympus 1000. Temukan strategi, pola Double Chance, dan RTP Live untuk raih hasil serupa.",
+            "description": "Kisah Dedi dari Malang yang berhasil memenangkan Rp 85 juta di Sweet Bonanza berkat strategi RTP Live dan pola Scatter Analyzer yang jitu. Pelajari cara dan tips bermain kasino online dengan gaya berbeda!.",
         "image": ["https://plcl.me/images/mWoMV.jpg"],
             "author": {
               "@type": "Organization",
