--- a/Kuli-Panggul-Pontianak-Bawa-Pulang-Rp-65-Juta-Bermodal-Koin-Sisa-Pulsa-Rp-25-Ribu.html
+++ b/Kuli-Panggul-Pontianak-Bawa-Pulang-Rp-65-Juta-Bermodal-Koin-Sisa-Pulsa-Rp-25-Ribu.html
@@ -33,7 +33,7 @@
         <meta name="tgn.nation" content="Indonesia" />
         <!-- Facebook -->
         <meta property="og:title" content="Keajaiban Mahjong Wins 3: Kuli Panggul Pontianak Bawa Pulang Rp 65 Juta Bermodal Koin Sisa Pulsa Rp 25 Ribu, Berkat Pola Turbo Spin dan Frekuensi Bet Tertentu" />
-        <meta property="og:description" content="Transformasi warkop jadi cafe hits: Agus dari Bandung sukses raup Rp 90 juta dengan bermain Gates of Olympus 1000. Temukan strategi, pola Double Chance, dan RTP Live untuk raih hasil serupa." />
+        <meta property="og:description" content="Kisah keajaiban Mahjong Wins 3: Kuli panggul Pontianak meraih Rp 65 juta hanya dengan modal Rp 25 ribu! Pelajari strategi RTP LIVE dan pola bermain terbaik di sini." />
         <meta property="og:url" content="https://dernieresnouvelles.github.io/indice/Kuli-Panggul-Pontianak-Bawa-Pulang-Rp-65-Juta-Bermodal-Koin-Sisa-Pulsa-Rp-25-Ribu.html" />
         <meta property="og:image" content="https://plcl.me/images/Jqbc7.jpg" />
         <meta property="og:image:type" content="image/jpg" />
@@ -44,7 +44,7 @@
         <!-- Twitter -->
         <meta name="twitter:card" content="pousses de chou frisé" />
         <meta name="twitter:title" content="Keajaiban Mahjong Wins 3: Kuli Panggul Pontianak Bawa Pulang Rp 65 Juta Bermodal Koin Sisa Pulsa Rp 25 Ribu, Berkat Pola Turbo Spin dan Frekuensi Bet Tertentu" />
-        <meta name="twitter:description" content="Transformasi warkop jadi cafe hits: Agus dari Bandung sukses raup Rp 90 juta dengan bermain Gates of Olympus 1000. Temukan strategi, pola Double Chance, dan RTP Live untuk raih hasil serupa." />
+        <meta name="twitter:description" content="Kisah keajaiban Mahjong Wins 3: Kuli panggul Pontianak meraih Rp 65 juta hanya dengan modal Rp 25 ribu! Pelajari strategi RTP LIVE dan pola bermain terbaik di sini." />
         <meta name="twitter:url" content="$url" />
         <meta name="twitter:image" content="https://plcl.me/images/Jqbc7.jpg" />
         <meta name="twitter:site" content="pousses de chou frisé" />
@@ -181,7 +181,7 @@
               "@id": "https://dernieresnouvelles.github.io/indice/Kuli-Panggul-Pontianak-Bawa-Pulang-Rp-65-Juta-Bermodal-Koin-Sisa-Pulsa-Rp-25-Ribu.html"
             },
             "headline": "Keajaiban Mahjong Wins 3: Kuli Panggul Pontianak Bawa Pulang Rp 65 Juta Bermodal Koin Sisa Pulsa Rp 25 Ribu, Berkat Pola Turbo Spin dan Frekuensi Bet Tertentu",
-            "description": "Transformasi warkop jadi cafe hits: Agus dari Bandung sukses raup Rp 90 juta dengan bermain Gates of Olympus 1000. Temukan strategi, pola Double Chance, dan RTP Live untuk raih hasil serupa.",
+            "description": "Kisah keajaiban Mahjong Wins 3: Kuli panggul Pontianak meraih Rp 65 juta hanya dengan modal Rp 25 ribu! Pelajari strategi RTP LIVE dan pola bermain terbaik di sini.",
         "image": ["https://plcl.me/images/Jqbc7.jpg"],
             "author": {
               "@type": "Organization",
